---
    config:
        class:
            hideEmptyMembersBox: True
---

classDiagram
    direction LR

    class RFStream {<<Interface>>}
    class TRXLooper
    class StreamComposite
    class RFStream_X8

    class IDMA {<<Interface>>}
    class LMS7002M {<<Interface>>}
    class FPGA {<<Interface>>}
    class ISerialPort {<<Interface>>}

    %% Inheritance
    RFStream<|--TRXLooper
    RFStream<|--StreamComposite
    RFStream<|--RFStream_X8

    %% Aggregation
    StreamComposite o-- RFStream

    %% Dependencies
    TRXLooper..>IDMA
    TRXLooper..>LMS7002M
    TRXLooper..>FPGA
    LMS7002M..>ISerialPort
    FPGA..>ISerialPort

